--- a/src/app/components/transaction-details/transaction-details.component.html
+++ b/src/app/components/transaction-details/transaction-details.component.html
@@ -6,7 +6,7 @@
   <div class="transaction__details__table__wrapper">
     <mat-form-field appearance="standard">
       <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Search transactions" #input>
     </mat-form-field>
 
     <div class="mat-elevation-z8 customize__user__table">
