--- a/src/app/modules/employee/employee-layout/employee-layout.component.html
+++ b/src/app/modules/employee/employee-layout/employee-layout.component.html
@@ -1,1 +1,10 @@
-<p>employee-layout works!</p>
+<div class="employee__layout__wrapper">
+  <div class="first__section__wrapper">
+    <app-items-of-the-day></app-items-of-the-day>
+  </div>
+  <div class="second__section__wrapper">
+    <app-my-transactions></app-my-transactions>
+    <app-passbook></app-passbook>
+  </div>
+</div>
+
