--- a/src/app/components/available-items/available-items.component.html
+++ b/src/app/components/available-items/available-items.component.html
@@ -8,7 +8,7 @@
       <input
         matInput
         (keyup)="applyFilter($event)"
-        placeholder="Ex. Mia"
+        placeholder="Search available items"
         #input
       />
     </mat-form-field>
@@ -45,6 +45,20 @@
           <td mat-cell *matCellDef="let row">{{ row.itemQuantity }}</td>
         </ng-container>
 
+        <!-- Actions Column -->
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+          <td mat-cell *matCellDef="let row">
+            <button mat-icon-button [disabled]="row.isDisabled" color="primary" >
+              <mat-icon (click)="editItem(row)" [ngClass]="{'disabled__bg': row.isDisabled}" matTooltip="Edit Item"
+              matTooltipClass="customize__tooltip" matTooltipPosition="above" [ngStyle]="{'color':'#673ab7'}" class="cursor__pointer">edit</mat-icon>
+              <mat-icon (click)="deleteItem(row)" [ngClass]="{'disabled__bg': row.isDisabled}"  matTooltipPosition="above" matTooltip="Delete Item"
+              matTooltipClass="customize__tooltip" [ngStyle]="{'color':'#e60000'}" class="cursor__pointer">delete</mat-icon>
+           </button>
+
+          </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
@@ -65,6 +79,7 @@
           class="customize__action__button"
           mat-flat-button
           color="primary"
+          (click)="addItem()"
         >
           Add Item
         </button>
