--- a/src/app/components/available-items/available-items.component.scss
+++ b/src/app/components/available-items/available-items.component.scss
@@ -18,14 +18,23 @@ td, th {
 }
 .action__wrapper {
   display: flex;
+  justify-content: space-between;
+  padding: 0 8px;
 }
 .customize__paginator {
   flex: 0 0 85%;
   display: flex;
 }
 .customize__user__table {
-  max-height: 40vh;
+  min-height: 36vh;
   overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
+.disabled__bg {
+  opacity: 0.2;
+  cursor: default;
+}
 
