--- a/src/app/components/items-of-the-day/items-of-the-day.component.html
+++ b/src/app/components/items-of-the-day/items-of-the-day.component.html
@@ -5,7 +5,7 @@
   <div class="items__of__the__day__table__wrapper">
     <mat-form-field appearance="standard">
       <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Search items" #input>
     </mat-form-field>
 
     <div class="mat-elevation-z8 customize__itemsoftheday__table">
@@ -41,6 +41,17 @@
           <td mat-cell *matCellDef="let row"> {{row.itemQuantity}} </td>
         </ng-container>
 
+        <!-- Actions Column -->
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+          <td mat-cell *matCellDef="let row">
+          <mat-icon (click)="editItem(row)" matTooltip="Edit Item"
+          matTooltipClass="customize__tooltip" matTooltipPosition="above" [ngStyle]="{'color':'#673ab7'}" class="cursor__pointer">edit</mat-icon>
+          <mat-icon (click)="deleteItem(row)" matTooltipPosition="above" matTooltip="Delete Item"
+          matTooltipClass="customize__tooltip" [ngStyle]="{'color':'#e60000'}" class="cursor__pointer">delete</mat-icon>
+          </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
@@ -51,7 +62,8 @@
       </table>
       <div class="action__wrapper">
         <mat-paginator class="customize__paginator" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-        <button class="customize__action__button" mat-flat-button color="primary">Add Item off the day</button>
+        <button class="customize__action__button" mat-flat-button color="primary" *ngIf="isAdmin" (click)="addItem()">Add Item</button>
+        <button class="customize__action__button" mat-flat-button color="primary" *ngIf="!isAdmin" (click)="buyItem()">Buy Item</button>
       </div>
 
     </div>
