--- a/src/app/components/my-transactions/my-transactions.component.html
+++ b/src/app/components/my-transactions/my-transactions.component.html
@@ -1,1 +1,56 @@
-<p>my-transactions works!</p>
+<div class="my__transactions__wrapper">
+  <div class="header">
+    <h2>My Transaction</h2>
+  </div>
+  <div class="transaction__details__table__wrapper" *ngIf="dataResult.length > 0">
+    <mat-form-field appearance="standard">
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Search transactions" #input>
+    </mat-form-field>
+
+    <div class="mat-elevation-z8 customize__user__table">
+      <table mat-table [dataSource]="dataSource" matSort>
+
+       <!-- ID Column -->
+       <ng-container matColumnDef="id">
+        <th mat-header-cell class="max-width-10-per" *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell class="max-width-10-per" *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+
+      <!-- transaction Amount Column -->
+      <ng-container matColumnDef="transactionAmount">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Transaction Amount </th>
+        <td mat-cell *matCellDef="let row"> {{row.transactionAmount}} </td>
+      </ng-container>
+
+      <!-- Date Column -->
+      <ng-container matColumnDef="dateDetail">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="white__space__no__wrap"> Date </th>
+        <td mat-cell *matCellDef="let row" class="white__space__no__wrap"> {{row.dateDetail}} </td>
+      </ng-container>
+
+      <!-- Source Column -->
+      <ng-container matColumnDef="item">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="white__space__no__wrap"> Item Name </th>
+        <td mat-cell *matCellDef="let row" class="white__space__no__wrap"> <div [matTooltip]="row.item"
+          matTooltipClass="customize__tooltip" matTooltipPosition="above" class="customize__itemName cursor__pointer">{{row.item}}</div> </td>
+      </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        </tr>
+      </table>
+      <div class="action__wrapper">
+        <mat-paginator class="customize__paginator" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+      </div>
+
+    </div>
+  </div>
+  <div class="error__wrapper" *ngIf="dataResult.length === 0">
+    <span>Oops no records to display!!!</span>
+  </div>
+</div>
