--- a/src/app/components/transaction-details/transaction-details.component.scss
+++ b/src/app/components/transaction-details/transaction-details.component.scss
@@ -24,6 +24,9 @@ td, th {
   display: flex;
 }
 .customize__user__table {
-  max-height: 40vh;
+  min-height: 36vh;
   overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
