--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -6,7 +6,7 @@
   <div class="user__table__wrapper">
     <mat-form-field appearance="standard">
       <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Search Users" #input>
     </mat-form-field>
 
     <div class="mat-elevation-z8 customize__user__table">
@@ -40,7 +40,7 @@
         <ng-container matColumnDef="addBalance">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Add Balance </th>
           <td mat-cell *matCellDef="let row">
-            <button class="customize__balance__button" mat-flat-button color="primary" (click)="openAddBalancePopup(row.empId, row.balance)">Add Balance</button>
+            <button class="customize__balance__button" mat-flat-button color="primary" (click)="openAddBalancePopup(row)">Add Balance</button>
           </td>
         </ng-container>
 
@@ -48,7 +48,7 @@
         <ng-container matColumnDef="makePurchase">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Make Purchase </th>
           <td mat-cell *matCellDef="let row">
-            <button class="customize__purchase__button" mat-flat-button color="primary">Make Purchase</button>
+            <button class="customize__purchase__button" mat-flat-button color="primary" (click)="openPurchasePopup(row)">Make Purchase</button>
           </td>
         </ng-container>
 
@@ -62,7 +62,7 @@
       </table>
       <div class="action__wrapper">
         <mat-paginator #paginator class="customize__paginator" [pageIndex]="currentPage" (page)="handlePage($event)" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 25, 100]" [length]="totalSize" aria-label="Select page of users"></mat-paginator>
-        <button class="customize__action__button" mat-flat-button color="primary">Add User</button>
+        <button class="customize__action__button" mat-flat-button color="primary" (click)="openAddUserPopup()">Add User</button>
       </div>
 
     </div>
