--- a/src/app/components/users/users.component.scss
+++ b/src/app/components/users/users.component.scss
@@ -15,14 +15,19 @@ td, th {
 }
 .action__wrapper {
   display: flex;
+  justify-content: space-between;
+  padding: 0 8px;
 }
 .customize__paginator {
   flex: 0 0 85%;
   display: flex;
 }
 .customize__user__table {
-  max-height: 40vh;
+  min-height: 36vh;
   overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 ::ng-deep .customize__add__money .mat-dialog-container{
   padding: 0;
