--- a/src/app/shared/components/header-layout/header-layout.component.scss
+++ b/src/app/shared/components/header-layout/header-layout.component.scss
@@ -2,8 +2,23 @@
 
 .customize__toolbar {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   font-family: $font-family-roboto;
   font-style: $font-style-normal;
   font-size: 14;
+}
+.customize__logout {
+  cursor: pointer;
+}
+.title__wrapper img{
+  height: 20px;
+  width: 25px;
+  vertical-align: text-top;
+  margin-right: 4px;
+}
+.justify__center {
+  justify-content: center;
+}
+.customize__logout__icon {
+  vertical-align: sub;
 }
