made changes related to color scheme

--- a/src/app/components/items-of-the-day/items-of-the-day.component.html
+++ b/src/app/components/items-of-the-day/items-of-the-day.component.html
@@ -48,7 +48,7 @@
           <mat-icon (click)="editItem(row)" matTooltip="Edit Item"
           matTooltipClass="customize__tooltip" matTooltipPosition="above" [ngStyle]="{'color':'#673ab7'}" class="cursor__pointer">edit</mat-icon>
           <mat-icon (click)="deleteItem(row)" matTooltipPosition="above" matTooltip="Delete Item"
-          matTooltipClass="customize__tooltip" [ngStyle]="{'color':'#e60000'}" class="cursor__pointer">delete</mat-icon>
+          matTooltipClass="customize__tooltip" [ngStyle]="{'color':'#C73E1D'}" class="cursor__pointer">delete</mat-icon>
           </td>
         </ng-container>
 
