--- a/src/app/components/available-items/available-items.component.html
+++ b/src/app/components/available-items/available-items.component.html
@@ -53,7 +53,7 @@
               <mat-icon (click)="editItem(row)" [ngClass]="{'disabled__bg': row.isDisabled}" matTooltip="Edit Item"
               matTooltipClass="customize__tooltip" matTooltipPosition="above" [ngStyle]="{'color':'#673ab7'}" class="cursor__pointer">edit</mat-icon>
               <mat-icon (click)="deleteItem(row)" [ngClass]="{'disabled__bg': row.isDisabled}"  matTooltipPosition="above" matTooltip="Delete Item"
-              matTooltipClass="customize__tooltip" [ngStyle]="{'color':'#e60000'}" class="cursor__pointer">delete</mat-icon>
+              matTooltipClass="customize__tooltip" [ngStyle]="{'color':'#C73E1D'}" class="cursor__pointer">delete</mat-icon>
            </button>
 
           </td>
