made small tweaks

--- a/src/app/components/passbook/passbook.component.html
+++ b/src/app/components/passbook/passbook.component.html
@@ -2,7 +2,7 @@
   <div class="header">
     <h2>My Passbook</h2>
   </div>
-  <div class="transaction__details__table__wrapper">
+  <div class="transaction__details__table__wrapper" *ngIf="dataResult.length > 0">
     <mat-form-field appearance="standard">
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Search passbook" #input>
@@ -49,5 +49,8 @@
       </div>
 
     </div>
+  </div>
+  <div class="error__wrapper" *ngIf="dataResult.length === 0">
+    <span>Oops no records to display!!!</span>
   </div>
 </div>
