--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
     </mat-form-field>
   </p>
 
-  <p *ngIf="error" class="error">
+  <p *ngIf="isError" class="error">
     {{ error }}
   </p>
 
