--- a/src/app/components/passbook/passbook.component.scss
+++ b/src/app/components/passbook/passbook.component.scss
@@ -29,3 +29,7 @@ td, th {
   flex-direction: column;
   justify-content: space-between;
 }
+.error__wrapper {
+  text-align: center;
+  margin-top: 14vh;
+}
